<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SplashFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:textSize="24sp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/stone_paper_scissors"/>
    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/number_of_rounds"
        android:maxLength="3"
        android:textColorHint="@android:color/white"
        android:inputType="number"
        android:layout_marginBottom="12dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/player_1"/>
    <EditText
        android:id="@+id/player_1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/name_of_player_1"
        android:textColorHint="@android:color/white"
        android:inputType="text"
        android:maxLength="10"
        android:layout_centerInParent="true"/>
    <EditText
        android:id="@+id/player_2"
        android:inputType="text"
        android:gravity="center"
        android:maxLength="10"
        android:layout_marginBottom="12dp"
        android:layout_below="@id/player_1"
        android:textColorHint="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_player_2"/>

    <Button
        android:id="@+id/single_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_2"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:text="@string/single_player"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"/>
    <Button
        android:id="@+id/two_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_player"
        android:layout_centerHorizontal="true"
        android:text="@string/two_players"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"/>

</RelativeLayout>